--- a/log.html
+++ b/log.html
@@ -76,7 +76,7 @@
     
     
   </div>
-  <div class="login" id ='e'style="margin-left:0px;display:flex;gap:10px;padding:17px;">
+  <div class="login ffe" id ='e'style="margin-left:0px;display:flex;gap:10px;padding:17px;">
     <button class="button" id="backdrop">Backdrops</button>
     <p id="nameb" class="heading2" style="padding:0px;margin:0px;font-size:17px;">Autumn</p>
   </div>
@@ -453,6 +453,10 @@
           margin-bottom:10px;
           flex-direction: row;
         }
+    }
+    @media only screen and (max-width: 600px) {
+      .ffe{
+        display:none;
     }
 
   </style>
