--- a/log.html
+++ b/log.html
@@ -78,7 +78,7 @@
   </div>
   <div class="login ffe" id ='e'style="margin-left:0px;display:flex;gap:10px;padding:17px;">
     <button class="button" id="backdrop">Backdrops</button>
-    <p id="nameb" class="heading2" style="padding:0px;margin:0px;font-size:17px;">Autumn</p>
+    <p id="nameb" class="heading2 ffe" style="padding:0px;margin:0px;font-size:17px;">Autumn</p>
   </div>
   </div>
   <div class="login">
