--- a/log.html
+++ b/log.html
@@ -76,7 +76,7 @@
     
     
   </div>
-  <div class="ffe login" id ='e'>
+  <div class="ffe login" id ='' style='margin-left:0px;display:flex;gap:10px;padding:17px;'>
     <button class="button" id="backdrop">Backdrops</button>
     <p id="nameb" class="heading2 ffe" style="padding:0px;margin:0px;font-size:17px;">Autumn</p>
   </div>
@@ -119,12 +119,6 @@
   </div>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-    #e{
-      margin-left:0px;
-      display:flex;
-      gap:10px;
-      padding:17px;
-    }
     .th,.at,#backdrop{
       margin-left:10px;
     }
