--- a/log.html
+++ b/log.html
@@ -76,7 +76,7 @@
     
     
   </div>
-  <div class="ffe login" id ='' style='margin-left:0px;display:flex;gap:10px;padding:17px;'>
+  <div class="ffe login" id ='e' style='margin-left:0px;display:flex;gap:10px;padding:17px;'>
     <button class="button" id="backdrop">Backdrops</button>
     <p id="nameb" class="heading2 ffe" style="padding:0px;margin:0px;font-size:17px;">Autumn</p>
   </div>
