--- a/log.html
+++ b/log.html
@@ -457,6 +457,8 @@
       .ffe,.heading2,#e,.login2{
         display:none;
         visibility: hidden;
+        width:1px;
+        height:1px;
     }
 
   </style>
