--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-  <nav class="nav">
+  <!--<nav class="nav">
     <a href="htm.html" id="1" class="navlink">Sign up</a>
   
     <a href="112.html" id="2" class="navlink">Login</a>
-  </nav>
+  </nav> -->
   <div class="login">
     <h1 style="color:lightred;letter-spacing: 5px;">-Reddipic-</h1>
     <p style="font-size:20px;padding-right:10px;padding-left:10px;">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
@@ -27,6 +27,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
     body {
+      margin-top:4%;
       user-select: none;
       background-image: url(g.gif);
       background-repeat: repeat-y;
@@ -149,6 +150,8 @@
       font-size: 1.31em;
       transition: font-size .2s, color .5;
     }
+    
+    
   </style>
 
 
