--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 style="color:lightred;letter-spacing: 5px;">-Reddipic-</h1>
     <p style="font-size:20px;padding-right:10px;padding-left:10px;">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
-    <button class="button" onclick="location.replace('log.html')">Take me to the website</button>
+    <button class="button" onclick="location.replace('reddipic.html')">Take me to the website</button>
     <button class="button"onclick='location.replace("https://github.com/that0therguy")'>Github</button>
 
   </div>
