--- a/reddipic.html
+++ b/reddipic.html
@@ -99,7 +99,7 @@
         <button class="buttonx blur" onclick="document.querySelector('.img').style.filter='blur(4px)'">blur</button>
         <button class="buttonx sep" onclick="document.querySelector('.img').style.filter='sepia(100%)'">sepia</button>
         <button class="buttonx satu" onclick="document.querySelector('.img').style.filter='saturate(7)'">saturate</button>
-        <button class="buttonx bri" onclick="document.querySelector('.img').style.filter='brightness(50%)'">dimmess</button>
+        <button class="buttonx bri" onclick="document.querySelector('.img').style.filter='brightness(50%)'">dimness</button>
         <button class="buttonx contrast" onclick="document.querySelector('.img').style.filter='contrast(180%)'">contrast</button>
         <button class="button no" onclick="document.querySelector('.img').style.filter='none'">None</button>
       </div>
