--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <a href="112.html" id="2" class="navlink">Login</a>
   </nav> -->
   <div class="login">
-    <h1 style="color:lightred;letter-spacing: 5px;">-Reddipic-</h1>
-    <p style="font-size:20px;padding-right:10px;padding-left:10px;">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
+    <h1 style="color:lightred;letter-spacing: 5px;text-shadow:1px 4px 20px rgb(136, 136, 136);">-Reddipic-</h1>
+    <p style="font-size:20px;padding-right:10px;padding-left:10px;text-shadow:0px 0px 3px rgb(255, 79, 10);">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
     <button class="button" onclick="location.replace('reddipic.html')">Take me to the website</button>
     <button class="button"onclick='location.replace("https://github.com/that0therguy")'>Github</button>
@@ -27,16 +27,25 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
     body {
-      margin-top:4%;
+    
       user-select: none;
-      background-image: url(g.gif);
+      background-image: url(g3.gif);
       background-repeat: repeat-y;
       background-size: 100%;
       background-color: orange;
       font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
       box-sizing: border-box;
-
+      display: flex;
+      justify-content: center;
+      align-items:center;
+      height:100vh;
+    }
+    h1{
+      background: linear-gradient(to top, #ffffff, rgb(255, 188, 161));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
     }
 
     @media only screen and (max-width: 600px) {
