--- a/reddipic.html
+++ b/reddipic.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  
+  <link rel="icon" type="image/x-icon" href="favicon.jpg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits">
@@ -795,5 +795,3 @@
 </body>
 
 </html>
-
-
