--- a/reddipic.html
+++ b/reddipic.html
@@ -3,12 +3,11 @@
 <html lang="en">
 
 <head>
-  <link rel="icon"  href="favicon.jpg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits">
   <meta name="keywords" content="reddit,image,scraper,cozy,fun">
-   <link rel="icon" type="image/x-icon" href="eeeee.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Image sourcer</title>
 </head>
 
