--- a/reddipic.html
+++ b/reddipic.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits">
   <meta name="keywords" content="reddit,image,scraper,cozy,fun">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <title>Image sourcer</title>
+  <title>Reddipic</title>
 </head>
 
 <body>
