--- a/reddipic.html
+++ b/reddipic.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits">
   <meta name="keywords" content="reddit,image,scraper,cozy,fun">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <title>Reddipic</title>
 </head>
 
