--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 style="color:lightred;letter-spacing: 5px;text-shadow:1px 4px 20px rgb(136, 136, 136);">-Reddipic-</h1>
     <p style="font-size:20px;padding-right:10px;padding-left:10px;text-shadow:0px 0px 3px rgb(255, 79, 10);">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
-    <button class="button" onclick="location.replace('reddipic.html')">Take me to the website</button>
+    <a class="button" href="reddipic.html">Take me to the website</a>
     <button class="button"onclick='location.replace("https://github.com/that0therguy")'>Github</button>
 
   </div>
@@ -58,7 +58,7 @@
 
     }
 
-    button {
+    button,a {
       font-size: 20px;
       background-image: linear-gradient(to bottom right, rgb(252, 157, 113), rgb(255, 160, 52));
       border-radius: 5px;
@@ -70,9 +70,11 @@
       color: rgb(53, 10, 2);
       box-shadow: 0px 0px 15px rgb(255, 94, 0);
       transition: font-size 0.2s;
+      text-decoration:none;
+      font-family:'poppins';
     }
 
-    button:hover {
+    button:hover,a:hover {
       font-size: 22px;
       
     }
