--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       transition: font-size 0.2s;
       text-decoration:none;
       font-family:'poppins';
+      text-align:center;
     }
 
     button:hover,a:hover {
