--- a/reddipic.html
+++ b/reddipic.html
@@ -1,4 +1,4 @@
-\
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,7 +18,7 @@
       <!--<h3 class="mode">☀️</h3>-->
     </nav>
   </header>
-  <div class="login5"><h1 style='letter-spacing: 5px;'>-Reddipic-</h1></div>
+  <div class="login5 hideo"><h1 style='letter-spacing: 5px;'>-Reddipic-</h1></div>
   
   <div id='masterdiv'>
   <div class="login2" id="e" style="margin-right:0px;">
@@ -440,10 +440,12 @@
       padding-right:20%;
       padding-left:20%;
       margin-bottom:2.1%;
+      margin-top:2.5%;
       backdrop-filter: blur(2px);
       box-shadow:none;
       width:fit-content;
     }
+
     .login4{
       min-height:fit-content;
       margin:10px;
@@ -618,6 +620,19 @@
       }
       
     })
+    function response(){
+      var w = window.innerWidth;
+      
+      var h = window.innerHeight; 
+
+      if (w < 600){
+        console.log('hi')
+        document.querySelector('.hideo').classList.remove('login5');
+      }else{
+        document.querySelector('.hideo').classList.add('login5');
+      }
+    }
+    setInterval(response,100)
     function doit(){
       document.querySelector('.login').addEventListener('onmouseover',()=>{
         document.querySelector('.login').style.boxShadow='0px 0px 15px rgb(255, 120, 31)';
