--- a/reddipic.html
+++ b/reddipic.html
@@ -575,7 +575,7 @@
       if(pass2==5){
         document.querySelector('.img').style.filter='initial';
         document.querySelector('.img').style.filter='brightness(50%)';
-        document.querySelector('.wee').innerHTML='Brightness'
+        document.querySelector('.wee').innerHTML='Low-Brightness'
  
       }
       if(pass2==6){
