--- a/reddipic.html
+++ b/reddipic.html
@@ -598,6 +598,7 @@
         
       }else{
         document.querySelector(".heading").innerHTML = "Getting your stuff...";
+        document.querySelector(".img").setAttribute('src','hibro.gif');
       }
       
 
