--- a/reddipic.html
+++ b/reddipic.html
@@ -99,7 +99,7 @@
       </div>
       <div class="login4" style="padding-bottom:5px;">
         
-        <button class="button download" onclick="downloadImage()">Original</button>
+        <button class="button download" onclick="downloadImage()">Original Poat</button>
         
           <button class="button ee">Image Filters</button>
           <p class="heading22 wee" style="margin:0px;font-size:17px;padding:0px; ">-</p>
