--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <h1 style="color:lightred;letter-spacing: 5px;text-shadow:1px 4px 20px rgb(136, 136, 136);">-Reddipic-</h1>
     <p style="font-size:20px;padding-right:10px;padding-left:10px;text-shadow:0px 0px 3px rgb(255, 79, 10);">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
-    <a class="button" href="reddipic.html">Take me to the website</a>
-    <button class="button"onclick='location.replace("https://github.com/that0therguy")'>Github</button>
+    <a class="button" href="reddipic.html">Take me to Reddipic</a>
+    <a class="button" href='https://github.com/that0therguy/reddipic1'>Github</button>
 
   </div>
   
@@ -34,7 +34,6 @@
       background-size: 100%;
       background-color: orange;
       font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
       box-sizing: border-box;
       display: flex;
       justify-content: center;
@@ -42,7 +41,7 @@
       height:100vh;
     }
     h1{
-      background: linear-gradient(to top, #ffffff, rgb(255, 188, 161));
+      background: linear-gradient(to top, #ffffff, rgb(255, 211, 161));
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -58,12 +57,12 @@
 
     }
 
-    button,a {
+    a {
       font-size: 20px;
-      background-image: linear-gradient(to bottom right, rgb(252, 157, 113), rgb(255, 160, 52));
+      background-image: linear-gradient(to bottom right, rgb(252, 157, 113,0.7), rgb(255, 160, 52,0.7));
       border-radius: 5px;
       border: none;
-      padding: 5px;
+      padding: 7px;
       margin:10px;
       padding-left: 27px;
       padding-right: 27px;
@@ -73,11 +72,13 @@
       text-decoration:none;
       font-family:'poppins';
       text-align:center;
+      
     }
 
-    button:hover,a:hover {
+    a:hover {
+      box-shadow: 0px 0px 15px rgb(255, 128, 54);
       font-size: 22px;
-      
+      background-image: linear-gradient(to bottom right, rgb(252, 157, 113,0.8), rgb(255, 160, 52,0.8));
     }
 
 
