--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p style="font-size:20px;padding-right:10px;padding-left:10px;text-shadow:0px 0px 3px rgb(255, 79, 10);">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
     <a class="button" href="reddipic.html">Take me to Reddipic</a>
-    <a class="button" href='https://github.com/that0therguy/reddipic1'>Github</button>
+    <a href='https://github.com/that0therguy/reddipic1'>Github</a>
 
   </div>
   
