--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>image sourcer</title>
+  <meta name="description" content="Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits">
+  <meta name="keywords" content="reddit,image,scraper,cozy,fun">
+  <title>Reddipic</title>
 </head>
 
 <body>
@@ -15,6 +16,7 @@
     <a href="112.html" id="2" class="navlink">Login</a>
   </nav> -->
   <div class="login">
+    
     <h1 style="color:lightred;letter-spacing: 5px;text-shadow:1px 4px 20px rgb(136, 136, 136);">-Reddipic-</h1>
     <p style="font-size:20px;padding-right:10px;padding-left:10px;text-shadow:0px 0px 3px rgb(255, 79, 10);">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
