--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <p style="font-size:20px;padding-right:10px;padding-left:10px;text-shadow:0px 0px 3px rgb(255, 79, 10);">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
     
-    <a class="button" href="reddipic.html">Take me to Reddipic</a>
+    <a style='margin:15px;' class="button" href="reddipic.html">Take me to Reddipic</a>
     <div>
     <a style='margin:2px;'href='https://github.com/that0therguy/reddipic1'>Github</a>
-    <a style='margin:2px;'href='https://reddipic-download-desktop.netlify.app/'>Desktop</a>
+    <a style='margin:2px;'href='reddipic.zip' download>Desktop</a>
     </div>
 
   </div>
@@ -61,6 +61,7 @@
         background-size: cover;
         /* Adjust background image */
       }
+
 
     }
 
