--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a style='margin:15px;' class="button" href="reddipic.html">Take me to Reddipic</a>
     <div>
     <a style='margin:2px;'href='https://github.com/that0therguy/reddipic1'>Github</a>
-    <a style='margin:2px;'href='reddipic.zip' download>Desktop</a>
+    <a style='margin:2px;'href='https://reddipic-for-windows.netlify.app' >Desktop</a>
     </div>
 
   </div>
