--- a/reddipic.html
+++ b/reddipic.html
@@ -309,13 +309,11 @@
         font-size:20px;
       }
     }
-    button{
-      opacity:0.85;
-    }
+
 
     .button {
       font-size: 20px;
-      background-image: linear-gradient(to bottom right, rgb(252, 157, 113), rgb(255, 160, 52));
+      background-image: linear-gradient(to bottom right, rgb(252, 157, 113,.8), rgb(255, 160, 52,.8));
       border-radius: 5px;
       border: none;
       padding: 5px;
