--- a/reddipic.html
+++ b/reddipic.html
@@ -313,7 +313,7 @@
 
     .button {
       font-size: 20px;
-      background-image: linear-gradient(to bottom right, rgb(252, 157, 113,), rgb(255, 160, 52,));
+      background-image: linear-gradient(to bottom right, rgb(252, 157, 113), rgb(255, 160, 52));
       border-radius: 5px;
       border: none;
       padding: 5px;
