--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </nav> -->
   <div class="login">
     
-    <h1 style="color:lightred;letter-spacing: 5px;text-shadow:1px 4px 20px rgb(180, 136, 136);">-Reddipic-</h1>
+    <h1 style="color:orange;letter-spacing: 7px;text-shadow:1px 4px 20px rgb(180, 136, 136);">-Reddipic-</h1>
     <p style="font-size:20px;padding-right:10px;padding-left:10px;text-shadow:0px 0px 10px orange">Take a cup of coffee, sit back and enjoy memes and other stuff. This website will retrieve images from given subreddits.
     </p>
     
